Name:                   fileneglect
Version:                0.0.0.1
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Be notified when a monotone file gets appended, solely with what was added.
Description:
    See module for docs
Cabal-Version:          >= 1.10
Build-Type:             Simple
Category:               Filesystem


Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      System.File.Neglect
  Build-Depends:        base >= 4.8 && < 5
                      , fsnotify
                      , path
                      , unix
                      , bytestring
                      , directory

Source-Repository head
  Type:                 git
  Location:             https://github.com/athanclark/fileneglect
